WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199892
Regression(
r247486
) Multiple Layout Tests in http/tests/cache/* are crashing on iOS Debug WK2
https://bugs.webkit.org/show_bug.cgi?id=199892
Summary
Regression(r247486) Multiple Layout Tests in http/tests/cache/* are crashing ...
Russell Epstein
Reported
2019-07-17 17:37:48 PDT
The following layout tests are flaky crashes on iOS Debug WK2. Flaky Crashes: http/tests/cache/stopped-revalidation.html http/tests/cache/reload-main-resource.php One-off Crash?: http/tests/cache/partitioned-cache.html Steps to Reproduce: Having difficulty reproducing these crashes locally. Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Ftests%2Fcache%2Fstopped-revalidation.html%20http%2Ftests%2Fcache%2Fpartitioned-cache.html%20http%2Ftests%2Fcache%2Freload-main-resource.php
Sample Crashlog: No crash log found for com.apple.WebKit.Networking.Development:70084. stdout: stderr: ERROR: Unhandled web process message 'WebUserContentController:RemoveAllContentRuleLists' /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebKit/WebProcess/WebProcess.cpp(768) : virtual void WebKit::WebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) ERROR: Unhandled web process message 'WebUserContentController:RemoveAllContentRuleLists' /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebKit/WebProcess/WebProcess.cpp(768) : virtual void WebKit::WebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) SHOULD NEVER BE REACHED /Volumes/Data/slave/ios-simulator-12-debug/build/Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp(234) : virtual void WebKit::NetworkConnectionToWebProcess::didReceiveMessage(IPC::Connection &, IPC::Decoder &) 1 0x115385389 WTFCrash 2 0x1046dfa6b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x1049850ec WebKit::NetworkConnectionToWebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 4 0x104751c09 IPC::Connection::dispatchMessage(IPC::Decoder&) 5 0x10474a6e9 IPC::Connection::dispatchMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >) 6 0x104752713 IPC::Connection::dispatchOneIncomingMessage() 7 0x104771d0b IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_11::operator()() 8 0x104771c29 WTF::Detail::CallableWrapper<IPC::Connection::enqueueIncomingMessage(std::__1::unique_ptr<IPC::Decoder, std::__1::default_delete<IPC::Decoder> >)::$_11, void>::call() 9 0x1153b21ca WTF::Function<void ()>::operator()() const 10 0x11541afb3 WTF::RunLoop::performWork() 11 0x11541c39e WTF::RunLoop::performWork(void*) 12 0x10dfb3be1 __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE0_PERFORM_FUNCTION__ 13 0x10dfb3463 __CFRunLoopDoSources0 14 0x10dfadb1f __CFRunLoopRun 15 0x10dfad302 CFRunLoopRunSpecific 16 0x1041ac044 -[NSRunLoop(NSRunLoop) runMode:beforeDate:] 17 0x1041ac1e4 -[NSRunLoop(NSRunLoop) run] 18 0x10fb50c66 _xpc_objc_main 19 0x10fb5310a xpc_main 20 0x104d44ca7 WebKit::XPCServiceMain(int, char const**) 21 0x105cdc06b WKXPCServiceMain 22 0x10406fc22 main 23 0x10f889541 start LEAK: 1 WebPageProxy
Attachments
Patch
(4.01 KB, patch)
2019-07-18 09:19 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-07-17 17:39:16 PDT
<
rdar://problem/53230217
>
Chris Dumez
Comment 2
2019-07-18 08:49:41 PDT
Looking into it now.
Chris Dumez
Comment 3
2019-07-18 09:19:08 PDT
Created
attachment 374389
[details]
Patch
Geoffrey Garen
Comment 4
2019-07-18 10:13:26 PDT
Comment on
attachment 374389
[details]
Patch r=me
WebKit Commit Bot
Comment 5
2019-07-18 10:45:00 PDT
Comment on
attachment 374389
[details]
Patch Clearing flags on attachment: 374389 Committed
r247565
: <
https://trac.webkit.org/changeset/247565
>
WebKit Commit Bot
Comment 6
2019-07-18 10:45:02 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug