Source/WebKit/NetworkProcess/WebStorage/StorageManager.cpp
@@ -537,9 +537,6 @@ void StorageManager::addAllowedSessionStorageNamespaceConnection(uint64_t storag
 void StorageManager::removeAllowedSessionStorageNamespaceConnection(uint64_t storageNamespaceID, IPC::Connection& allowedConnection)
 {
     auto allowedConnectionID = allowedConnection.uniqueID();
-    if (m_connections.remove(allowedConnectionID))
-        allowedConnection.removeWorkQueueMessageReceiver(Messages::StorageManager::messageReceiverName());
-
     m_queue->dispatch([this, protectedThis = makeRef(*this), allowedConnectionID, storageNamespaceID]() mutable {
         ASSERT(m_sessionStorageNamespaces.contains(storageNamespaceID));
         if (auto* sessionStorageNamespace = m_sessionStorageNamespaces.get(storageNamespaceID))
@@ -574,7 +571,7 @@ void StorageManager::cloneSessionStorageNamespace(uint64_t storageNamespaceID, u
 
 void StorageManager::processDidCloseConnection(IPC::Connection& connection)
 {
-    if (m_connections.removeAll(connection.uniqueID()))
+    if (m_connections.remove(connection.uniqueID()))
         connection.removeWorkQueueMessageReceiver(Messages::StorageManager::messageReceiverName());
 
     m_queue->dispatch([this, protectedThis = makeRef(*this), connectionID = connection.uniqueID()]() mutable {
